--- a/cv04/VirusOutbreak/css/main.css
+++ b/cv04/VirusOutbreak/css/main.css
@@ -17,11 +17,12 @@
 
 .container {
     position: relative;
+    cursor: none;
 }
 
 #container canvas {
     position: absolute;
-    cursor: none;
+    /*cursor: none;*/
 }
 
 .hidden{
